messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app-green
  labels:
    app: django-messaging-app
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging-app
      version: green
  template:
    metadata:
      labels:
        app: django-messaging-app
        version: green
    spec:
      containers:
        - name: django-app
          image: messaging-app:v2.0
          ports:
            - containerPort: 8000
          command: ["python3", "manage.py"]
          args: ["runserver", "0.0.0.0:8000"]
