messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-messaging-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: messaging-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-messaging-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: django-messaging-service
                port:
                  number: 80
